--- a/Stratum.Droid/Stratum.Droid.csproj
+++ b/Stratum.Droid/Stratum.Droid.csproj
@@ -22,7 +22,7 @@
         <PublishTrimmed>true</PublishTrimmed>
         <TrimMode>full</TrimMode>
         <TrimmerRootDescription>trim.xml</TrimmerRootDescription>
-        <RuntimeIdentifiers>android-arm;android-arm64;android-x86;android-x64</RuntimeIdentifiers>
+        <RuntimeIdentifiers>android-arm;android-arm64;android-x64</RuntimeIdentifiers>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0">
@@ -33,8 +33,7 @@
         <PackageReference Include="Serilog" Version="4.3.0" />
         <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-        <PackageReference Include="sqlite-net-sqlcipher" Version="1.9.172" />
-        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.11" />
+        <PackageReference Include="sqlite-net-base" Version="1.9.172" />
         <PackageReference Include="TinyIoC" Version="1.4.0-rc1">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
@@ -54,6 +53,7 @@
         <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.10.0.5" />
         <PackageReference Include="Xamarin.Google.Android.Material" Version="1.12.0.4" />
         <PackageReference Include="StratumAuth.ZXing" Version="1.2.1" />
+        <PackageReference Include="StratumAuth.SQLCipher" Version="1.1.0" />
     </ItemGroup>
     <ItemGroup Condition="!$(DefineConstants.Contains(FDROID))">
         <PackageReference Include="Xamarin.GooglePlayServices.Wearable" Version="119.0.0.3" />
