replace tinyioc with autofac

--- a/Stratum.WearOS/Stratum.WearOS.csproj
+++ b/Stratum.WearOS/Stratum.WearOS.csproj
@@ -26,15 +26,12 @@
         <RuntimeIdentifiers>android-arm;android-arm64;android-x86;android-x64</RuntimeIdentifiers>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Autofac" Version="8.3.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Mono.AotProfiler.Android" Version="9.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="TinyIoC" Version="1.4.0-rc1">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
         <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.16" />
         <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.8.7.4" />
         <PackageReference Include="Xamarin.AndroidX.Wear" Version="1.3.0.14" />
