--- a/Stratum.Droid/Stratum.Droid.csproj
+++ b/Stratum.Droid/Stratum.Droid.csproj
@@ -25,6 +25,7 @@
         <RuntimeIdentifiers>android-arm;android-arm64;android-x64</RuntimeIdentifiers>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Autofac" Version="8.3.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
@@ -34,9 +35,6 @@
         <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
         <PackageReference Include="sqlite-net-base" Version="1.9.172" />
-        <PackageReference Include="TinyIoC" Version="1.4.0-rc1">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
         <PackageReference Include="Xamarin.AndroidX.Biometric" Version="1.1.0.29" />
         <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.8.0.10" />
         <PackageReference Include="Xamarin.AndroidX.Camera.Camera2" Version="1.4.2.2" />
