add en us mapping + reword strings

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -7,6 +7,7 @@ files:
         zh-CN: zh-rCN
         zh-TW: zh-rTW
         pt-BR: pt-rBR
+        en-US: en-rUS
 
   - source: /Stratum.WearOS/Resources/values/strings.xml
     translation: /Stratum.WearOS/Resources/values-%two_letters_code%/strings.xml
@@ -15,6 +16,7 @@ files:
         zh-CN: zh-rCN
         zh-TW: zh-rTW
         pt-BR: pt-rBR
+        en-US: en-rUS
 
   - source: /fastlane/metadata/android/en-US/short_description.txt
     translation: /fastlane/metadata/android/%locale%/short_description.txt
