fix: language persistence and build structure improvements
  - Fix JSON deserialization issue causing language settings not to persist
  - Add JsonStringEnumConverter to Load() method in PreferenceManager
  - Fix version number display in AboutPanel (read from assembly)
  - Add detailed logging for startup and language switching
  - Remove default language resource from App.xaml
  - Clean up build directory structure
  - Add build and diagnostic tools (clean.bat, diagnose.bat, view-logs.ps1)
  - Update .gitignore to exclude test-build directory
  - Create BUILD_GUIDE.md documentation

--- a/Stratum.Desktop/.gitignore
+++ b/Stratum.Desktop/.gitignore
@@ -1,7 +1,7 @@
 # Build outputs
 bin/
 obj/
-releases/
+test-build/
 
 # Visual Studio
 .vs/
@@ -13,11 +13,8 @@ releases/
 # Rider
 .idea/
 
-# Publish outputs
+# Publish outputs (intermediate files)
 publish/
-*.exe
-*.dll
-*.pdb
 
 # User-specific files
 *.rsuser
