--- a/Stratum.Desktop/Stratum.Desktop.csproj
+++ b/Stratum.Desktop/Stratum.Desktop.csproj
@@ -3,6 +3,8 @@
         <OutputType>WinExe</OutputType>
         <TargetFramework>net9.0-windows</TargetFramework>
         <UseWPF>true</UseWPF>
+        <UseWindowsForms>true</UseWindowsForms>
+        <ApplicationIcon>Assets\AppIcon.ico</ApplicationIcon>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <LangVersion>13</LangVersion>
