--- a/Stratum.Droid/proguard.cfg
+++ b/Stratum.Droid/proguard.cfg
@@ -8,5 +8,6 @@
 -keep class com.google.android.gms.wearable.** { *; }
 -keep class androidx.lifecycle.** { *; }
 -keep class androidx.work.** { *; }
+-keep class crc** { *; }
 
 -dontwarn androidx.paging.PositionalDataSource
