--- a/Stratum.WearOS/proguard.cfg
+++ b/Stratum.WearOS/proguard.cfg
@@ -1,4 +1,5 @@
 ﻿-keep class androidx.core.app.CoreComponentFactory
 -keep class androidx.appcompat.widget.FitWindowsLinearLayout
 -keep class com.google.android.gms.wearable.** { *; }
+-keep class crc** { *; }
 -dontwarn com.google.android.wearable.compat.WearableActivityController$AmbientCallback
