integrate WebDAV backup and auto-restore into AutoBackupWorker
   - Refactor backup creation into reusable CreateEncryptedBackup()
   - Add dual-destination support: local folder + WebDAV upload
   - Add auto-restore from WebDAV when remote backup is newer
   - Update WorkManager constraints to require network when WebDAV is active

--- a/Stratum.Droid/Properties/AndroidManifest.xml
+++ b/Stratum.Droid/Properties/AndroidManifest.xml
@@ -7,10 +7,8 @@
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <!-- Disable unused Network State permission from AndroidX Work Manager -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" tools:node="remove"/>
-    <!-- Disable inherited Internet permission -->
-    <uses-permission android:name="android.permission.INTERNET" tools:node="remove"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
     <application android:allowBackup="false" android:label="@string/appName" android:icon="@mipmap/ic_launcher"
